...
  }
  if (error) {
    showErrorToast(error)
  }

  return (
    <View testID='parkingSpotsListScreen' className='flex-1 px-1 pt-2'>
      {/* TODO: make "add spot" prominent if no spots, subtle otherwise? */}
      <Card
        testID='addParkingSpotCard'
        style={cardStyle}
        onPress={() => {
          router.push('/parkingSpots/new')
        }}
      >
        <Card.Title title={'Add a New Spot'} left={AddNewParkingSpot} />
...
